Chapter13/petservice-vs-destinationrule_default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petservice-vs
spec:
  hosts:
  - petservice
  http:
  - route:
    - destination:
        host: petservice
        subset: v2
        port:
          number: 8080
      weight: 50
    - destination:
        host: petservice
        subset: v1
        port:
          number: 8080
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petservice-destinationrule
spec:
  host: petservice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
